Revision history for Path-Class-Rule

{{$NEXT}}

    - Bumped Number::Compare prerequisite version to 0.02 to
      avoid uninitialized warnings when comparing numbers without
      a magnitude.

0.001     2011-09-11 22:40:44 America/New_York
  
    - Initial release
